[package]
name = "jito-backrun-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.10"
futures-util = "0.3.28"
histogram = "0.6.9"
jito-protos = { path = "../jito_protos" }
log = "0.4.17"
rand = "0.8.5"
jito-searcher-client = { path = "../searcher_client" }
solana-client = {git = "https://github.com/jito-foundation/jito-solana", tag = "v1.17.22-jito"}
solana-metrics = {git = "https://github.com/jito-foundation/jito-solana", tag = "v1.17.22-jito"}
solana-sdk = {git = "https://github.com/jito-foundation/jito-solana", tag = "v1.17.22-jito"}
solana-transaction-status = {git = "https://github.com/jito-foundation/jito-solana", tag = "v1.17.22-jito"}
spl-memo = "4.0.0"
thiserror = "1.0.40"
tokio = "1"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
