[package]
name = "jito-protos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
prost = "0.12"
prost-types = "0.12"
solana-perf = {git = "https://github.com/jito-foundation/jito-solana", tag = "v1.17.22-jito"}
solana-sdk = {git = "https://github.com/jito-foundation/jito-solana", tag = "v1.17.22-jito"}
tonic = "0.10"

[build-dependencies]
tonic-build = "0.10"
