[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"
description = "Wrapper around the generated gRPC. Adds auth and retry semantics."

[dependencies]
futures-util = "0.3.28"
jito-protos = { path = "../jito_protos" }
log = "0.4"
prost-types = "0.12"
solana-client = {git = "https://github.com/jito-foundation/jito-solana", tag = "v1.17.22-jito"}
solana-metrics = {git = "https://github.com/jito-foundation/jito-solana", tag = "v1.17.22-jito"}
solana-sdk = {git = "https://github.com/jito-foundation/jito-solana", tag = "v1.17.22-jito"}
solana-transaction-status = {git = "https://github.com/jito-foundation/jito-solana", tag = "v1.17.22-jito"}
thiserror = "1.0.40"
tokio = "1"
tonic = "0.10"
